--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -120,12 +120,171 @@
     </div>
     
     <div class="main">
-        
+        <div class="grid wide">
+            <div class="row" style="justify-content: center;">
+                <div class="l-8 m-10 c-12">
+                    <div class="top__search__box border-radius-smooth ground-color-white mrg-top-40 box-shadow-6">
+                        <div class="search__box">
+                            <input class="search__input" type="text" placeholder="Tìm kiếm">
+                            <a href="">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="post__box border-radius-smooth ground-color-white box-shadow-6">
+                        <div class="post__box-body">
+                            <div class="post__heading">
+                                <figure class="">
+                                    <img class="post__avatar circle-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                </figure>
+                                <div class="flex-col pad-left-12 flex-growth-2">
+                                    <span class="font-verdana--geneva post__owner">Hưng Nguyễn</span>
+                                    <div style="display: flex;">
+                                        <span class="post__time">2021-06-20 11:30:26</span>
+                                        <span class="post__mode">
+                                            <i class="fas fa-unlock-alt"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <span class="post__setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__content">
+                                <p>Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI</p>
+                            </div>
+                        </div>
+                        <div class="post__box-image">
+                            <img src="./assets/img/post/pixel-slide1.jpg" alt="">
+                        </div>
+                        <div class="post__footer">
+                            <span class="post__activity border-radius-smooth" id="post__comment-activity">
+                                <i class="far fa-comment"></i>
+                                Bình luận
+                            </span>
+                            <span class="post__activity border-radius-smooth" id="post__share-activity">
+                                <i class="fas fa-share-square"></i>
+                                Chia sẻ
+                            </span>
+                        </div>
+                        <div class="post__comment-area">
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="post__box border-radius-smooth ground-color-white box-shadow-6">
+                        <div class="post__box-body">
+                            <div class="post__heading">
+                                <figure class="">
+                                    <img class="post__avatar circle-avatar circle-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                </figure>
+                                <div class="flex-col pad-left-12 flex-growth-2">
+                                    <span class="font-verdana--geneva post__owner">Hưng Nguyễn</span>
+                                    <div style="display: flex;">
+                                        <span class="post__time">2021-06-20 11:30:26</span>
+                                        <span class="post__mode">
+                                            <i class="fas fa-unlock-alt"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <span class="post__setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__content">
+                                <p>Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI</p>
+                            </div>
+                        </div>
+                        <div class="post__box-image">
+                            <img src="./assets/img/post/pixel-slide1.jpg" alt="">
+                        </div>
+                        <div class="post__footer">
+                            <span class="post__activity border-radius-smooth" id="post__comment-activity">
+                                <i class="far fa-comment"></i>
+                                Bình luận
+                            </span>
+                            <span class="post__activity border-radius-smooth" id="post__share-activity">
+                                <i class="fas fa-share-square"></i>
+                                Chia sẻ
+                            </span>
+                        </div>
+                        <div class="post__comment-area">
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__comment-load">
+                                Xem tắt cả bình luận
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-
+    <!-- Go to top -->
+    <div class="teleport__top">
+        <a href="#top">
+            <i class="fas fa-angle-up"></i>
+        </a>
+    </div>
     <!-- footer -->
-    <footer class="footer mrg-top-80">
+    <footer class="footer">
         <div class="grid wide">
             <div class="row">
                 <div class="footer__contact">
