--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,7 @@
         <div class="grid wide">
             <div class="row" style="justify-content: center;">
                 <div class="l-8 m-10 c-12">
+                    <!-- Search -->
                     <div class="top__search__box border-radius-smooth ground-color-white mrg-top-40 box-shadow-6">
                         <div class="search__box">
                             <input class="search__input" type="text" placeholder="Tìm kiếm">
@@ -131,6 +132,7 @@
                             </a>
                         </div>
                     </div>
+                    <!-- Post -->
                     <div class="post__box border-radius-smooth ground-color-white box-shadow-6">
                         <div class="post__box-body">
                             <div class="post__heading">
@@ -200,8 +202,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="post__box border-radius-smooth ground-color-white box-shadow-6">
+
+                    <!-- Post -->
+                    <div class="post__box post__shared border-radius-smooth ground-color-white box-shadow-6">
                         <div class="post__box-body">
+                            <!-- Post heading -->
                             <div class="post__heading">
                                 <figure class="">
                                     <img class="post__avatar circle-avatar circle-avatar" src="./assets/img/avatar/186608.jpg" alt="">
@@ -225,6 +230,17 @@
                         </div>
                         <div class="post__box-image">
                             <img src="./assets/img/post/pixel-slide1.jpg" alt="">
+                        </div>
+                        <div class="content__shared">
+                            <div class="content__shared-heading">
+                                <a href="">
+                                    <span class="post__shared-username">gaughegom</span>
+                                </a>
+                                <span class="post__shared-time">2021 06 13</span>
+                            </div>
+                            <div class="content__shared-body">
+                                Đây là nội dung để test UI share 1 post  Đây là nội dung để test UI share 1 post  Đây là nội dung để test UI share 1 post  Đây là nội dung để test UI share 1 post
+                            </div>
                         </div>
                         <div class="post__footer">
                             <span class="post__activity border-radius-smooth" id="post__comment-activity">
