update html file

--- a/app/user.html
+++ b/app/user.html
@@ -128,14 +128,181 @@
                     <div class="user__info__avatar-box">
                         <img class="circle-avatar user__info__avatar" src="./assets/img/avatar/186608.jpg" alt="">
                     </div>
+                    <div class="user__info-box">
+                        <div class="user__info-realname">
+                            Hưng Nguyễn
+                        </div>
+                        <div class="user__info-post--public">
+                            13 bài viết
+                        </div>
+                        <div class="user__info-desc">
+                            Hello mọi người mình là Hưng đây Hello mọi người mình là Hưng đây Hello mọi người mình là Hưng đây Hello mọi người mình là Hưng đây
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="main">
         <div class="grid wide">
-            <div class="row">
-                
+            <div class="row" style="justify-content: center;">
+                <div class="l-8 m-10 c-12">
+                    <!-- Post -->
+                    <div class="post__box border-radius-smooth ground-color-white box-shadow-6">
+                        <div class="post__box-body">
+                            <div class="post__heading">
+                                <figure class="">
+                                    <img class="post__avatar circle-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                </figure>
+                                <div class="flex-col pad-left-12 flex-growth-2">
+                                    <span class="font-verdana--geneva post__owner">Hưng Nguyễn</span>
+                                    <div style="display: flex;">
+                                        <span class="post__time">2021-06-20 11:30:26</span>
+                                        <span class="post__mode">
+                                            <i class="fas fa-unlock-alt"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <span class="post__setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__content">
+                                <p>Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI</p>
+                            </div>
+                        </div>
+                        <div class="post__box-image">
+                            <img src="./assets/img/post/pixel-slide1.jpg" alt="">
+                        </div>
+                        <div class="post__footer">
+                            <span class="post__activity border-radius-smooth" id="post__comment-activity">
+                                <i class="far fa-comment"></i>
+                                Bình luận
+                            </span>
+                            <span class="post__activity border-radius-smooth" id="post__share-activity">
+                                <i class="fas fa-share-square"></i>
+                                Chia sẻ
+                            </span>
+                        </div>
+                        <div class="post__comment-area">
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Share post -->
+                    <div class="post__box post__shared border-radius-smooth ground-color-white box-shadow-6">
+                        <div class="post__box-body">
+                            <!-- Post heading -->
+                            <div class="post__heading">
+                                <figure class="">
+                                    <img class="post__avatar circle-avatar circle-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                </figure>
+                                <div class="flex-col pad-left-12 flex-growth-2">
+                                    <span class="font-verdana--geneva post__owner">Hưng Nguyễn</span>
+                                    <div style="display: flex;">
+                                        <span class="post__time">2021-06-20 11:30:26</span>
+                                        <span class="post__mode">
+                                            <i class="fas fa-unlock-alt"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <span class="post__setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__content">
+                                <p>Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI Đây là 1 post test để xây dựng UI</p>
+                            </div>
+                        </div>
+                        <div class="post__box-image">
+                            <img src="./assets/img/post/pixel-slide1.jpg" alt="">
+                        </div>
+                        <div class="content__shared">
+                            <div class="content__shared-heading">
+                                <a href="">
+                                    <span class="post__shared-username">gaughegom</span>
+                                </a>
+                                <span class="post__shared-time">2021 06 13</span>
+                            </div>
+                            <div class="content__shared-body">
+                                Đây là nội dung để test UI share 1 post  Đây là nội dung để test UI share 1 post  Đây là nội dung để test UI share 1 post  Đây là nội dung để test UI share 1 post
+                            </div>
+                        </div>
+                        <div class="post__footer">
+                            <span class="post__activity border-radius-smooth" id="post__comment-activity">
+                                <i class="far fa-comment"></i>
+                                Bình luận
+                            </span>
+                            <span class="post__activity border-radius-smooth" id="post__share-activity">
+                                <i class="fas fa-share-square"></i>
+                                Chia sẻ
+                            </span>
+                        </div>
+                        <div class="post__comment-area">
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__user__comment">
+                                <img class="post__avatar circle-avatar post__user__comment-avatar" src="./assets/img/avatar/186608.jpg" alt="">
+                                <div class="post__user__comment-body">
+                                    <span class="font-verdana--geneva post__user__comment-name">gaughegom</span>
+                                    <div class="post__user__comment-content">Đây là comment reply để test  Đây là comment reply để test Đây là comment reply để test Đây là comment reply để test</div>
+                                </div>
+                                <span class="post__user__comment-setting">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </span>
+                            </div>
+                            <div class="post__comment-load">
+                                Xem tắt cả bình luận
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
